Fix logic in EDSMApi Fix in SystemsFragment

--- a/app/src/main/res/layout/fragment_station_page.xml
+++ b/app/src/main/res/layout/fragment_station_page.xml
@@ -56,7 +56,7 @@
                 app:layout_constraintStart_toStartOf="@+id/guideline"
                 app:layout_constraintTop_toBottomOf="@+id/textView8" />
 
-            <TextView
+            <m.luigi.eliteboy.views.AutoScrollingTextView
                 android:id="@+id/factionView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
