--- a/app/src/main/res/layout/fragment_nearest.xml
+++ b/app/src/main/res/layout/fragment_nearest.xml
@@ -64,4 +64,16 @@
         app:layout_constraintTop_toBottomOf="@+id/cardView5"
         tools:listitem="@layout/data_item" />
 
+    <com.github.ybq.android.spinkit.SpinKitView
+        android:id="@+id/nearestSpinKit"
+        style="@style/SpinKitView.Large.DoubleBounce"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="24dp"
+        android:layout_marginBottom="24dp"
+        android:visibility="gone"
+        app:SpinKit_Color="@color/md_amber_700"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
