Removed CreditsFragment Updated gradle Refactoring of various fragments

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -10,9 +10,6 @@
         android:label="fragment_profile"
         tools:layout="@layout/fragment_profile" >
         <action
-            android:id="@+id/action_profileFragment_to_creditsFragment"
-            app:destination="@id/creditsFragment" />
-        <action
             android:id="@+id/action_profileFragment_to_systemFragment"
             app:destination="@id/systemFragment" />
         <action
@@ -22,11 +19,6 @@
             android:id="@+id/action_profileFragment_to_stationFragment"
             app:destination="@id/stationFragment" />
     </fragment>
-    <fragment
-        android:id="@+id/creditsFragment"
-        android:name="m.luigi.eliteboy.CreditsFragment"
-        android:label="fragment_credits"
-        tools:layout="@layout/fragment_credits" />
     <fragment
         android:id="@+id/systemFragment"
         android:name="m.luigi.eliteboy.SystemFragment"
@@ -60,7 +52,7 @@
         tools:layout="@layout/fragment_news" />
     <fragment
         android:id="@+id/systemsFragment"
-        android:name="m.luigi.eliteboy.SystemsFragment"
+        android:name="m.luigi.eliteboy.FoundFragment"
         android:label="fragment_systems"
         tools:layout="@layout/fragment_systems" >
         <action
@@ -81,12 +73,20 @@
     </fragment>
     <fragment
         android:id="@+id/stationsFragment"
-        android:name="m.luigi.eliteboy.StationsFragment"
+        android:name="m.luigi.eliteboy.SearchStationsFragment"
         android:label="fragment_stations"
-        tools:layout="@layout/fragment_stations" />
+        tools:layout="@layout/fragment_stations" >
+        <action
+            android:id="@+id/action_stationsFragment_to_systemsFragment"
+            app:destination="@id/systemsFragment" />
+    </fragment>
     <fragment
         android:id="@+id/searchSystemsFragment"
         android:name="m.luigi.eliteboy.SearchSystemsFragment"
         android:label="fragment_search_systems"
-        tools:layout="@layout/fragment_search_systems" />
+        tools:layout="@layout/fragment_search_systems" >
+        <action
+            android:id="@+id/action_searchSystemsFragment_to_systemsFragment"
+            app:destination="@id/systemsFragment" />
+    </fragment>
 </navigation>
