--- a/app/src/main/res/layout/fragment_nearest.xml
+++ b/app/src/main/res/layout/fragment_nearest.xml
@@ -28,7 +28,7 @@
                 android:layout_height="wrap_content"
                 android:padding="8dp"
                 android:text="Reference System"
-                android:textColor="@color/md_amber_800"
+                android:textColor="@color/colorPrimary"
                 android:textSize="18sp"
                 android:textStyle="bold" />
 
@@ -40,6 +40,7 @@
                 android:layout_marginStart="8dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginBottom="8dp"
+                android:backgroundTint="@color/colorPrimary"
                 android:dropDownWidth="match_parent"
                 android:textColor="@color/md_black_1000"
                 android:textColorHighlight="@color/md_amber_800"
@@ -55,7 +56,6 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
