Implemented in all fragment but SystemFragment

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -84,7 +84,8 @@
         tools:layout="@layout/fragment_search_stations" >
         <action
             android:id="@+id/action_searchStationsFragment_to_foundFragment"
-            app:destination="@id/foundFragment" />
+            app:destination="@id/foundFragment"
+            app:popUpTo="@+id/nearestFragment" />
     </fragment>
     <fragment
         android:id="@+id/searchSystemsFragment"
